--- a/scss/base.scss
+++ b/scss/base.scss
@@ -19,9 +19,6 @@ body {
 }
 
 .qr-code-card {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
   width: 320px;
   padding: 16px 16px 40px 16px;
   border-radius: 20px;
@@ -33,7 +30,7 @@ body {
     flex-direction: column;
     align-items: center;
     width: fit-content;
-    gap: 16px;
+    gap: 24px;
   }
 
   &__image {
